--- a/packages/tpetra/core/test/StructuredCrsWrapper/CMakeLists.txt
+++ b/packages/tpetra/core/test/StructuredCrsWrapper/CMakeLists.txt
@@ -8,6 +8,7 @@ TRIBITS_ADD_EXECUTABLE_AND_TEST(
     ${TEUCHOS_STD_UNIT_TEST_MAIN}
   ARGS ""
   COMM serial mpi
+  NUM_MPI_PROCS 1-4
   STANDARD_PASS_OUTPUT
   )
 
